--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,6 +1,7 @@
 /*
+ *= require_self
+ *= require_tree .
  *= require formtastic-bootstrap
- *= require bootstrap
  *= require formtastic_changes
  *= require jquery-ui-bootstrap 
  *= require frab
