--- a/app/views/call_for_papers/_form.html.haml
+++ b/app/views/call_for_papers/_form.html.haml
@@ -6,5 +6,5 @@
     = f.input :welcome_text, :hint => "Enter a welcome message or additional instructions you want to display to participants. (HTML)"
     = f.input :info_url, :hint => "A web page that contains additional information about the Call for Papers. Please enter a full URL including 'http://'"
     = f.input :contact_email, :hint => "An email address where participants can contact you in case they have any questions."
-  = f.buttons do
-    = f.commit_button :button_html => {:class => "btn primary"}
+  = f.actions do
+    = f.action :submit, :button_html => {:class => "btn primary"}
