--- a/app/views/call_for_papers/_form_notifications.html.haml
+++ b/app/views/call_for_papers/_form_notifications.html.haml
@@ -1,8 +1,8 @@
 - call_for_papers = @conference.call_for_papers
 = semantic_form_for(call_for_papers, url: call_for_papers_path) do |f|
   = dynamic_association :notifications, t(:notifications), f
-  = f.buttons do
-    = f.commit_button :button_html => {:class => "btn primary"}
+  = f.actions do
+    = f.action :submit, :button_html => {:class => "btn primary"}
 
 :javascript
   $(function() {
