--- a/app/views/cfp/people/_form.html.haml
+++ b/app/views/cfp/people/_form.html.haml
@@ -15,5 +15,5 @@
     = f.input :abstract, :input_html => {:rows => 4}, :hint => t("cfp.abstract_hint") 
     = f.input :description, :hint => t("cfp.description_hint")
     = dynamic_association :links, t("cfp.links"), f
-  = f.buttons do
-    = f.commit_button :button_html => {:class => "btn primary"}
+  = f.actions do
+    = f.action :submit, :button_html => {:class => "btn primary"}
