--- a/app/views/conferences/_form.html.haml
+++ b/app/views/conferences/_form.html.haml
@@ -16,8 +16,8 @@
     = f.input :feedback_enabled, :as => :boolean, :hint => "If you enable this, your program export will include links to a feedback form where attendees can rate an event."
   = f.inputs t(:ticket_server) do
     = f.input :ticket_type, :as => :radio, :collection => Conference::TICKET_TYPES
-  = f.buttons do
-    = f.commit_button :button_html => {:class => "btn primary"}
+  = f.actions do
+    = f.action :submit, :button_html => {:class => "btn primary"}
 
 :coffeescript
   addColorPickers = ->
