--- a/app/views/conferences/_form_days.html.haml
+++ b/app/views/conferences/_form_days.html.haml
@@ -1,4 +1,4 @@
 = semantic_form_for(@conference, :url => conference_path) do |f|
   = dynamic_association :days, t(:days), f
-  = f.buttons do
-    = f.commit_button :button_html => {:class => "btn primary"}
+  = f.actions do
+    = f.action :submit, :button_html => {:class => "btn primary"}
