--- a/app/views/event_ratings/show.html.haml
+++ b/app/views/event_ratings/show.html.haml
@@ -79,8 +79,8 @@
         = f.inputs do
           = f.input :rating, :as => :rating
           = f.input :comment, :input_html => {:rows => 3}
-        = f.buttons do
-          = f.commit_button :button_html => {:class => "btn primary"}
+        = f.actions do
+          = f.action :submit, :button_html => {:class => "btn primary"}
   .row
     .span16
       %h2 All ratings
