--- a/app/views/events/edit_people.html.haml
+++ b/app/views/events/edit_people.html.haml
@@ -5,6 +5,6 @@
     .span16
       = semantic_form_for(@event) do |f|
         = dynamic_association :event_people, nil, f
-        = f.buttons do
-          = f.commit_button :button_html => {:class => "btn primary"}
-          = link_to "Cancel", :back, :class => "btn"
+        = f.actions do
+          = f.action :submit, :button_html => {:class => "btn primary"}
+          = f.action :cancel, as: :link, button_html: { class: 'btn' }
