Event form: chose language by default if only one is available
Don't bother submitters with form fields that don't actually give them any
options to chose from. If only one language is configured for a given
conference, automatically select it.

--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -9,7 +9,10 @@
     = f.input :event_type, collection: translated_options(Event::TYPES)
     = f.association :track, collection: @conference.tracks
     = f.input :time_slots, as: :select, collection: timeslots
-    = f.input :language, as: :language_select, only: @conference.language_codes
+    - if @conference.language_codes.count > 1
+      = f.input :language, as: :language_select, only: @conference.language_codes
+    - else
+      = f.hidden_field :language, name: 'language', value: @conference.language_codes.first
     = f.input :public, as: :inline_boolean, hint: t('events_module.inputs.hints.public')
     = image_input_box(f.object.logo)
     = f.input :logo
