Event form: chose event type be default if only one is available
Don't bother submitters with form fields that don't actually give them any
options to chose from. If only one event type is available, automatically
select it.

Note that this only only makes sense if there is another (downstream) patch
that touches the entries of Event::TYPES.

--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -8,6 +8,10 @@
       = f.simple_fields_for :ticket do |ticket|
         = ticket.input :remote_ticket_id
     = f.input :event_type, collection: translated_options(Event::TYPES)
+    - if Event::TYPES.count > 1
+      = f.input :event_type, collection: translated_options(Event::TYPES)
+    - else
+      = f.hidden_field :event_type, name: 'event_type', value: Event::TYPES.first
     = f.association :track, collection: @conference.tracks
     = f.input :time_slots, as: :select, collection: timeslots
     - if @conference.language_codes.count > 1
