Event form: only show ticket field if ticket server is configured
There's not need for this input field unless there is a ticket server
configured.

--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -4,8 +4,9 @@
     = f.input :title
     = f.input :subtitle
     - @event.build_ticket unless @event.ticket
-    = f.simple_fields_for :ticket do |ticket|
-      = ticket.input :remote_ticket_id
+    - if @conference.ticket_server
+      = f.simple_fields_for :ticket do |ticket|
+        = ticket.input :remote_ticket_id
     = f.input :event_type, collection: translated_options(Event::TYPES)
     = f.association :track, collection: @conference.tracks
     = f.input :time_slots, as: :select, collection: timeslots
