--- a/app/views/public/schedule/booklet.html.haml
+++ b/app/views/public/schedule/booklet.html.haml
@@ -30,9 +30,9 @@
                 = "(#{event.language})"
 
           - if event.abstract.present?
-            %p= simple_format event.abstract.truncate(250)
+            %p= simple_format event.abstract
           - if event.description.present?
-            %p= simple_format event.description.truncate(1200)
+            %p= simple_format event.description
           .speakers
             %ul
               - event.speakers.each do |speaker|
