--- a/app/views/reports/_report_menu.html.haml
+++ b/app/views/reports/_report_menu.html.haml
@@ -14,6 +14,7 @@
   %li= link_to t('reports_module.events_with_more_than_one_speaker'), report_on_events_path("events_with_more_than_one_speaker")
   %li= link_to t('reports_module.event_timeslot_deviation'), report_on_events_path('event_timeslot_deviation')
   %li= link_to t('reports_module.events_with_tech_rider'), report_on_events_path('events_with_tech_rider')
+  %li= link_to t('reports_module.possible_events_for_time_slots'), report_on_time_slots_path('possible_events')
 %p Query Speakers
 %ul
   %li= link_to t('reports_module.expected_speakers'), report_on_people_path("expected_speakers")
